--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .claude/
 .buildlog/
 .history
@@ -30,9 +29,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.pub-cacherelease
 
 # Symbolication related
 app.*.symbols
@@ -43,7 +40,6 @@ app.*.map.json
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
-/android/app/release
 
 pubspec.lock
 /linux/flutter/generated_plugin_registrant.cc
